packages/misc/xorg/mesa/error
libtool: compile:  armv7a-unknown-linux-uclibceabi-g++ -DPACKAGE_NAME=\"Mesa\" -DPACKAGE_TARNAME=\"mesa\" -DPACKAGE_VERSION=\"11.0.2\" "-DPACKAGE_STRING=\"Mesa 11.0.2\"" "-DPACKAGE_BUGREPORT=\"https://bugs.freedesktop.org/enter_bug.cgi?product=Mesa\"" -DPACKAGE_URL=\"\" -DPACKAGE=\"mesa\" -DVERSION=\"11.0.2\" -D_FILE_OFFSET_BITS=64 -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -DYYTEXT_POINTER=1 -DHAVE___BUILTIN_BSWAP32=1 -DHAVE___BUILTIN_BSWAP64=1 -DHAVE___BUILTIN_CLZ=1 -DHAVE___BUILTIN_CLZLL=1 -DHAVE___BUILTIN_CTZ=1 -DHAVE___BUILTIN_EXPECT=1 -DHAVE___BUILTIN_FFS=1 -DHAVE___BUILTIN_FFSLL=1 -DHAVE___BUILTIN_POPCOUNT=1 -DHAVE___BUILTIN_POPCOUNTLL=1 -DHAVE___BUILTIN_UNREACHABLE=1 -DHAVE_FUNC_ATTRIBUTE_CONST=1 -DHAVE_FUNC_ATTRIBUTE_FLATTEN=1 -DHAVE_FUNC_ATTRIBUTE_FORMAT=1 -DHAVE_FUNC_ATTRIBUTE_MALLOC=1 -DHAVE_FUNC_ATTRIBUTE_PACKED=1 -DHAVE_FUNC_ATTRIBUTE_PURE=1 -DHAVE_FUNC_ATTRIBUTE_UNUSED=1 -DHAVE_FUNC_ATTRIBUTE_WARN_UNUSED_RESULT=1 -DHAVE_DLADDR=1 -DHAVE_CLOCK_GETTIME=1 -DHAVE_PTHREAD=1 -I. -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965 -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/include -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/ -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mapi -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/ -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/gallium/include -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/gallium/auxiliary -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/common -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/intel/server -I/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/gtest/include -I../../../../../src/glsl/nir -I../../../../../src/mesa/drivers/dri/common -D__STDC_LIMIT_MACROS -D_GNU_SOURCE -DNDEBUG -DTEXTURE_FLOAT_ENABLED -DHAVE_XLOCALE_H -DHAVE_SYS_SYSCTL_H -DHAVE_STRTOF -DHAVE_MKOSTEMP -DHAVE_DLOPEN -DHAVE_POSIX_MEMALIGN -DHAVE_LIBDRM -DGLX_USE_DRM -DHAVE_LIBUDEV -DGLX_INDIRECT_RENDERING -DGLX_DIRECT_RENDERING -DGLX_USE_TLS -DHAVE_ALIAS -DHAVE_DRI3 -DHAVE_MINCORE -fvisibility=hidden -I/usr/include/libdrm -O2 -Wall -fno-strict-aliasing -fno-builtin-memcmp -MT brw_blorp_blit_eu.lo -MD -MP -MF .deps/brw_blorp_blit_eu.Tpo -c /home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_blorp_blit_eu.cpp  -fPIC -DPIC -o .libs/brw_blorp_blit_eu.o
In file included from /home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_binding_tables.c:42:0:
/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_context.h: In function 'brw_program_reloc':
/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_context.h:1996:24: error: 'drm_intel_bo' has no member named 'offset64'
    return brw->cache.bo->offset64 + prog_offset;
                        ^
make[6]: *** [brw_binding_tables.lo] Error 1
make[6]: *** Waiting for unfinished jobs....
In file included from /home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/intel_batchbuffer.h:6:0,
                 from /home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_blorp.cpp:25:
/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_context.h: In function 'uint32_t brw_program_reloc(brw_context*, uint32_t, uint32_t)':
/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_context.h:1996:26: error: 'drm_intel_bo' has no member named 'offset64'
    return brw->cache.bo->offset64 + prog_offset;
                          ^
make[6]: *** [brw_blorp.lo] Error 1
In file included from /home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/intel_fbo.h:35:0,
                 from /home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_blorp_blit.cpp:28:
/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_context.h: In function 'uint32_t brw_program_reloc(brw_context*, uint32_t, uint32_t)':
/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_context.h:1996:26: error: 'drm_intel_bo' has no member named 'offset64'
    return brw->cache.bo->offset64 + prog_offset;
                          ^
In file included from /home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_blorp_blit_eu.h:27:0,
                 from /home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_blorp_blit_eu.cpp:25:
/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_context.h: In function 'uint32_t brw_program_reloc(brw_context*, uint32_t, uint32_t)':
/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2/src/mesa/drivers/dri/i965/brw_context.h:1996:26: error: 'drm_intel_bo' has no member named 'offset64'
    return brw->cache.bo->offset64 + prog_offset;
                          ^
make[6]: *** [brw_blorp_blit.lo] Error 1
make[6]: *** [brw_blorp_blit_eu.lo] Error 1
make[6]: Leaving directory `/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2-obj/src/mesa/drivers/dri/i965'
make[5]: *** [all-recursive] Error 1
make[5]: Leaving directory `/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2-obj/src/mesa/drivers/dri'
make[4]: *** [all-recursive] Error 1
make[4]: Leaving directory `/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2-obj/src/mesa'
make[3]: *** [all] Error 2
make[3]: Leaving directory `/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2-obj/src/mesa'
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory `/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2-obj/src'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/devel/uclibc-dev/toolchain-build/mesa-11.0.2-obj'
make: *** [build] Error 1
